[gd_scene load_steps=4 format=3 uid="uid://bbd1nus2hhev6"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_0visg"]
[ext_resource type="FontFile" uid="uid://ps1cpp0lmmal" path="res://assets/fonts/wellbutrin.ttf" id="2_onag8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi337"]
bg_color = Color(0.870588, 0.619608, 0.254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[node name="AbilityUpgradeCard" type="PanelContainer"]
process_mode = 3
custom_minimum_size = Vector2(120, 150)
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xi337")
script = ExtResource("1_0visg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AbilityName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onag8")
text = "Ability Name"

[node name="AbilityDescription" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onag8")
text = "Ability description"
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="on_gui_input"]
